Add missing vnaconv_ztoy and vnaconv_ytoz to vnaconv.3
Minor manpage updates only.

--- a/src/vnacal_new.3
+++ b/src/vnacal_new.3
@@ -300,9 +300,9 @@ At least four standards are needed to solve the 2x2 UE14 calibration.
 .\"
 .IP "E12"
 E12 is a generalization of classic SOLT.
-Internally, library solves the system using UE14 terms and thus corrects
-for exactly the same errors as EU14, creating separate calibrations for
-each column.
+Internally, the library solves the system using UE14 terms and thus
+corrects for exactly the same errors as UE14, creating separate
+calibrations for each column.
 The difference is only in the format of the saved error terms.
 In E12, the library converts the U error terms it used to solve the
 systems to the more conventional E (scattering parameter) form before
