Update dates on man pages
Switch to YYYY-MM-DD format and make the dates match the date of the
last change to the given page (ignoring copyright update commits).
Fix misleading comment in the rational function interpolation function.
Finally, improve comments in the vnacal-VanHamme test.

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -15,7 +15,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .\"
-.TH VNACAL 3 "JULY 2017" GNU
+.TH VNACAL 3 "2022-11-25" GNU
 .nh
 .SH NAME
 vnacal_apply, vnacal_apply_m, vnacal_create, vnacal_add_calibration, vnacal_delete_calibration, vnacal_find_calibration, vnacal_free, vnacal_get_calibration_end, vnacal_get_columns, vnacal_get_filename, vnacal_get_fmax, vnacal_get_fmin, vnacal_get_frequencies, vnacal_get_frequency_vector, vnacal_get_name, vnacal_get_rows, vnacal_get_type, vnacal_get_z0, vnacal_load, vnacal_name_to_type, vnacal_property_count, vnacal_property_delete, vnacal_property_get, vnacal_property_get_subtree, vnacal_property_keys, vnacal_property_set, vnacal_property_set_subtree, vnacal_property_type, vnacal_save, vnacal_set_dprecision, vnacal_set_fprecision, vnacal_type_to_name \- vector network analyzer calibration
