--- a/src/vnacal_parameter.3
+++ b/src/vnacal_parameter.3
@@ -15,7 +15,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .\"
-.TH VNACAL_PARAMETER 3 "FEB 2021" GNU
+.TH VNACAL_PARAMETER 3 "2022-11-25" GNU
 .nh
 .SH NAME
 vnacal_make_scalar_parameter, vnacal_make_vector_parameter, vnacal_make_unknown_parameter, vnacal_make_correlated_parameter, get_parameter_value, vnacal_delete_parameter \- vnacal s-parameter functions
