--- a/src/vnaproperty.3
+++ b/src/vnaproperty.3
@@ -15,7 +15,7 @@
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .\"
-.TH VNAPROPERTY 3 "FEB 2021" GNU
+.TH VNAPROPERTY 3 "2022-11-25" GNU
 .SH NAME
 vnaproperty_vtype, vnaproperty_vcount, vnaproperty_vkeys, vnaproperty_vget, vnaproperty_vset, vnaproperty_vdelete, vnaproperty_vget_subtree, vnaproperty_vset_subtree, vnaproperty_type, vnaproperty_count, vnaproperty_keys, vnaproperty_get, vnaproperty_set, vnaproperty_delete, vnaproperty_get_subtree, vnaproperty_set_subtree, vnaproperty_copy, vnaproperty_quote_key, vnaproperty_import_yaml_from_string, vnaproperty_import_yaml_from_file, vnaproperty_export_yaml_to_file \- VNA YAML interface
 .\"
